@@ -2,6 +2,7 @@
 2009-03-09  Rodrigo Araújo <alf.rodrigo@gmail.com>
         * CairoPlot.py: BarPlot, HorizontalBarPlot and VerticalBarPlot revision
         		 and refactoring;
+        		Color themes are now allowed for backgrounds.
 
 2009-03-08  Rodrigo Araújo <alf.rodrigo@gmail.com>
         * CairoPlot.py: Code revision and refactoring;
